RESOLVED FIXED84898
Biolab disaster crashes on ToT
https://bugs.webkit.org/show_bug.cgi?id=84898
Summary Biolab disaster crashes on ToT
Oliver Hunt
Reported 2012-04-25 15:46:14 PDT
Biolab disaster crashes on ToT
Attachments
Patch (2.58 KB, patch)
2012-04-25 15:49 PDT, Oliver Hunt
fpizlo: review+
Oliver Hunt
Comment 1 2012-04-25 15:49:31 PDT
Filip Pizlo
Comment 2 2012-04-25 15:52:36 PDT
Comment on attachment 138886 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=138886&action=review r=me with the simplification > Source/JavaScriptCore/dfg/DFGVirtualRegisterAllocationPhase.cpp:115 > + InlineCallFrame& inlineCallFrame = codeBlock()->inlineCallFrames()[i]; > + CodeBlock* codeBlock = jsCast<FunctionExecutable*>(inlineCallFrame.executable.get())->baselineCodeBlockFor(inlineCallFrame.isCall ? CodeForCall : CodeForConstruct); baselineCodeBlockForInlineCallFrame(&codeBlock()->inlineCallFrames()[i])
Oliver Hunt
Comment 3 2012-04-25 15:57:15 PDT
Oliver Hunt
Comment 4 2012-04-25 16:00:17 PDT
Note You need to log in before you can comment on or make changes to this bug.